[gd_scene load_steps=8 format=3 uid="uid://xt23ms8xoeq1"]

[ext_resource type="Script" path="res://scenes/ui/title_screen.gd" id="1_g6k1j"]
[ext_resource type="Texture2D" uid="uid://geepind6d2m7" path="res://gfx/title/Gray.png" id="1_nkjx5"]
[ext_resource type="LabelSettings" uid="uid://7kdgc65j65r0" path="res://gfx/title/GM_white_32.tres" id="2_e1crv"]
[ext_resource type="Texture2D" uid="uid://dgbt7jevvg8se" path="res://gfx/title/blue_panel.png" id="4_nden5"]
[ext_resource type="Texture2D" uid="uid://ipcvuo3047h8" path="res://gfx/title/green_panel.png" id="5_gki6t"]
[ext_resource type="Script" path="res://scenes/ui/version.gd" id="6_8au2s"]

[sub_resource type="LabelSettings" id="LabelSettings_sfykx"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g6k1j")

[node name="BackgroundImg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_nkjx5")
expand_mode = 5
stretch_mode = 1

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VB" type="VBoxContainer" parent="MC"]
layout_mode = 2

[node name="Label" type="Label" parent="MC/VB"]
layout_mode = 2
text = "Tubilda Game"
label_settings = ExtResource("2_e1crv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="MC/VB"]
custom_minimum_size = Vector2(0, 110)
layout_mode = 2

[node name="Butonmenu" type="VBoxContainer" parent="MC/VB"]
layout_mode = 2

[node name="NewGameBttn" type="TextureButton" parent="MC/VB/Butonmenu"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("4_nden5")
texture_pressed = ExtResource("5_gki6t")
ignore_texture_size = true
stretch_mode = 6

[node name="Label1" type="Label" parent="MC/VB/Butonmenu/NewGameBttn"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -27.0
offset_right = 100.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
text = "New "
label_settings = ExtResource("2_e1crv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadGameBttn" type="TextureButton" parent="MC/VB/Butonmenu"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("4_nden5")
texture_pressed = ExtResource("5_gki6t")
ignore_texture_size = true
stretch_mode = 6

[node name="Label2" type="Label" parent="MC/VB/Butonmenu/LoadGameBttn"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -27.0
offset_right = 100.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
text = "New "
label_settings = ExtResource("2_e1crv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreditsGameBttn" type="TextureButton" parent="MC/VB/Butonmenu"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("4_nden5")
texture_pressed = ExtResource("5_gki6t")
ignore_texture_size = true
stretch_mode = 6

[node name="Label3" type="Label" parent="MC/VB/Butonmenu/CreditsGameBttn"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -27.0
offset_right = 100.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
text = "New "
label_settings = ExtResource("2_e1crv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -23.0
offset_right = 122.0
grow_vertical = 0
text = "Version: "
label_settings = SubResource("LabelSettings_sfykx")
script = ExtResource("6_8au2s")

[connection signal="pressed" from="MC/VB/Butonmenu/NewGameBttn" to="." method="_on_new_game_bttn_pressed"]
[connection signal="pressed" from="MC/VB/Butonmenu/LoadGameBttn" to="." method="_on_load_game_bttn_pressed"]
[connection signal="pressed" from="MC/VB/Butonmenu/CreditsGameBttn" to="." method="_on_credits_game_bttn_pressed"]
